# bfgs

./: Cargo.toml  Readme.MD  playground.ipynb  pyproject.toml
src/: lib.rs
