[package]
name = "bfgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bfgs"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.17.0"
ndarray = "0.15"  # or your required version
ndarray-linalg = { version = "0.15"}
numpy = "0.17"
